src/P.g4
grammar P;
VAR: [A-Z][a-zA-Z0-9]*;
IDENT: [a-z][a-zA-Z0-9]*;
LBR: '(';
RBR: ')';
SEP: ',';
ARROW: ':-';
BEGIN: '?-';
DOT: '.';
program: definitions BEGIN target;
definitions: relation*;
relation: head body? DOT;
head: IDENT args;
body: ARROW atom(SEP atom)*;
atom: IDENT args?;
args: LBR arg (SEP arg)* RBR;
arg: atom | VAR;
target: (atom(SEP atom)*)? DOT;
WS: [ \t\r\n]+ -> skip;
